test/classes/delete-free/lifetimes/l12.good
l12.chpl:15: In function 'test':
l12.chpl:20: error: Scoped variable cannot be returned
l12.chpl:16: note: consider scope of rr
